--- a/src/Components/ClientTable/styles.module.css
+++ b/src/Components/ClientTable/styles.module.css
@@ -1,22 +1,24 @@
-#customers {
+.customers{
+    margin-top: -5px;
+}
+.customers {
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
     border-collapse: collapse;
-    width: 100%;
-}
-
-#customers td, #customers th {
-    border: 1px solid #ddd;
-    padding: 8px;
-}
-
-#customers tr:nth-child(even){background-color: #f2f2f2;}
-
-#customers tr:hover {background-color: #ddd;}
-
-#customers th {
-    padding-top: 12px;
-    padding-bottom: 12px;
+  }
+  
+  .customers td, .customers th {
+    border-bottom: 1px solid #ddd;;
+    padding: 10px;
+  }
+  
+  
+  .customers tr:hover {background-color: #ddd;}
+  
+  .customers th {
+    padding-top: 5px;
+    padding-bottom: 5px;
     text-align: left;
-    background-color: #4CAF50;
+    background-color: #868CFF
+    ;
     color: white;
-}
+  }
