--- a/src/Components/card/styles.module.css
+++ b/src/Components/card/styles.module.css
@@ -1,9 +1,15 @@
+
 .container{
-    width: 80%;
+    display: flex;
+    justify-content: space-between;
+    margin-left: 25px;
 }
-.cardContent {
-    width: 10%;
+.container div{
+    padding:  0 5%;
+    width:120px;
+    box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);
+    border: 1px solid green;
 }
-h5{
-    line-height: 15;
+.text{
+    font-size: 15px;
 }
